- start explorer page - some function in Chat/

--- a/server/trunk/web/root/templates/includes/header.tt
+++ b/server/trunk/web/root/templates/includes/header.tt
@@ -10,6 +10,11 @@
     <meta name="KEYWORDS" content="Sophie, rpm[% IF keywords.size -%], [%- keywords.join(', ') | html -%][% END %]">
     <meta name="REVISIT-AFTER" content="[% IF metarevisite %][% metarevisite %][% ELSE %]15[% END %] days">
     <link rel="icon" href="[%- c.uri_for('/static', 'sophie.ico') -%]" type="image/x-icon">
+    <script type="text/javascript" language="JavaScript" src="[% c.uri_for('/static', 'CalendarPopup.js') %]"></script>
+    <script type="text/javascript" language="JavaScript" src="[% c.uri_for('/static', 'prototype.js') %]"></script>
+    <script type="text/javascript" language="JavaScript" src="[% c.uri_for('/static', 'effects.js') %]"></script>
+    <script type="text/javascript" language="JavaScript" src="[% c.uri_for('/static', 'dragdrop.js') %]"></script>
+    <script type="text/javascript" language="JavaScript" src="[% c.uri_for('/static', 'controls.js') %]"></script>
 </head>
 <body>
 
