- add search functions

--- a/server/trunk/web/root/templates/includes/header.tt
+++ b/server/trunk/web/root/templates/includes/header.tt
@@ -10,7 +10,6 @@
     <meta name="KEYWORDS" content="Sophie, rpm[% IF keywords.size -%], [%- keywords.join(', ') | html -%][% END %]">
     <meta name="REVISIT-AFTER" content="[% IF metarevisite %][% metarevisite %][% ELSE %]15[% END %] days">
     <link rel="icon" href="[%- c.uri_for('/static', 'sophie.ico') -%]" type="image/x-icon">
-    <script type="text/javascript" language="JavaScript" src="[% c.uri_for('/static', 'CalendarPopup.js') %]"></script>
     <script type="text/javascript" language="JavaScript" src="[% c.uri_for('/static', 'prototype.js') %]"></script>
     <script type="text/javascript" language="JavaScript" src="[% c.uri_for('/static', 'effects.js') %]"></script>
     <script type="text/javascript" language="JavaScript" src="[% c.uri_for('/static', 'dragdrop.js') %]"></script>
@@ -23,6 +22,7 @@
     <div style="float:left">
         <p id="sitename">Sophie</p>
         <p id="sophie_menu">
+        <span><a href="[% c.uri_for('/search') %]">Search</a></span>
         <span><a href="[% c.uri_for('/distrib') %]">Distribution</a></span>
         <span><a href="[% c.uri_for('/explorer') %]">Explorer</a></span>
         </p>
