--- a/server/trunk/web/root/templates/includes/header.tt
+++ b/server/trunk/web/root/templates/includes/header.tt
@@ -22,7 +22,7 @@
     <div style="float:left">
         <p id="sitename">Sophie</p>
         <p id="sophie_menu">
-        <span><a href="[% c.uri_for('/search/adv') %]">Search</a></span>
+        <span><a href="[% c.uri_for('/search') %]">Search</a></span>
         <span><a href="[% c.uri_for('/distrib') %]">Distribution</a></span>
         <span><a href="[% c.uri_for('/explorer') %]">Explorer</a></span>
         </p>
