--- a/server/trunk/web/root/templates/html/distrib/distrib.tt
+++ b/server/trunk/web/root/templates/html/distrib/distrib.tt
@@ -1,5 +1,5 @@
 <ol>
 [% FOREACH media = xmlrpc %]
-<li><a href="[% c.uri_for('/', c.req.path, media.label) %]">[% media.label %]</a></li>
+<li><a href="[% c.uri_for('/', c.req.path, 'media', media) %]">[% media %]</a></li>
 [% END %]
 </ol>
