--- a/server/trunk/web/root/templates/html/distrib/media.tt
+++ b/server/trunk/web/root/templates/html/distrib/media.tt
@@ -1,2 +1,5 @@
-
-[% INCLUDE 'distrib/distrib.tt' %]
+<ol>
+[% FOREACH media = xmlrpc %]
+<li><a href="[% c.uri_for('/', c.req.path, media.label) %]">[% media.label %]</a></li>
+[% END %]
+</ol>
