--- a/server/trunk/web/root/templates/html/rpms/rpms.tt
+++ b/server/trunk/web/root/templates/html/rpms/rpms.tt
@@ -1,6 +1,6 @@
 <!-- $Id$ -->
 
-<div id="sophie_tags">
+<div id="sophie_info">
 <ul id="sophie_tag">
 <li class="tag">Name: [% xmlrpc.info.name | html %]</li>
 <li class="tag">Version: [% xmlrpc.info.version | html %]</li>
@@ -13,66 +13,9 @@
 <li class="tag">Summary: [% xmlrpc.info.summary | html %]</li>
 </ul>
 
-Description:
-<p>[% xmlrpc.info.description | html %]</p>
+<h2>Description:</h2>
+<div id="sophie_rpm_description">
+[% xmlrpc.info.description | html | html_para %]
+</div>
 </div>
 
-<div id="sophie_deps">
-
-[% BLOCK deps %]
-[% FOREACH dep = deplist %]
-[% '<ul class="sophie_deps">' IF loop.first %]
-<li>
-    [% dep.name | html %]
-    [% IF dep.evr %][% dep.sense | html %] [% dep.evr | html %][% END %]
-</li>
-[% '</ul>' IF loop.last %]
-[% END %]
-[% END %]
-
-[% IF xmlrpc.deps.P.size %]
-Provides:
-[% PROCESS deps deplist = xmlrpc.deps.P %]
-[% END %]
-
-[% IF xmlrpc.deps.R.size %]
-Requires:
-[% PROCESS deps deplist = xmlrpc.deps.R %]
-[% END %]
-
-[% IF xmlrpc.deps.C.size %]
-Conflict:
-[% PROCESS deps deplist = xmlrpc.deps.C %]
-[% END %]
-
-[% IF xmlrpc.deps.O.size %]
-Obsoletes:
-[% PROCESS deps deplist = xmlrpc.deps.O %]
-[% END %]
-
-[% IF xmlrpc.deps.E.size %]
-Enhanced:
-[% PROCESS deps deplist = xmlrpc.deps.E %]
-[% END %]
-
-[% IF xmlrpc.deps.S.size %]
-Suggest:
-[% PROCESS deps deplist = xmlrpc.deps.S %]
-[% END %]
-
-<div id="sophie_files">
-Files:
-
-[% FOREACH file = xmlrpc.files %]
-[%- IF loop.first -%]
-<table border=0 style="font-family: monospace">
-[%- END -%]
-<tr><td>[% file.perm %]</td><td>[% file.size | format('%6d') %]</td><td>[%
-file.user | format('%10s') -%]</td>
-<td>[%- file.group | format('%10s') %]</td><td>[% file.filename %]</td>
-<td>[% file.has_content %]</tr>
-[%- IF loop.last -%]
-</table>
-[%- END -%]
-[% END %]
-</div>
