- make POD model re-usable

--- a/server/trunk/web/root/templates/html/help/xmlrpc/index.html
+++ b/server/trunk/web/root/templates/html/help/xmlrpc/index.html
@@ -1,4 +1,1 @@
-[% pom = c.model('Help::XMLRPC') %]
-[% FOREACH sec = pom.list %]
-[% pom.present(sec) %]
-[% END %]
+[% c.model('Help::POD').xmlrpc_functions %]
