--- a/server/trunk/web/root/templates/html/rpms/files.tt
+++ b/server/trunk/web/root/templates/html/rpms/files.tt
@@ -9,8 +9,16 @@
 [%- END -%]
 <tr><td>[% file.perm %]</td><td align="right">[% file.size | format('%6d') %]</td><td>[%
 file.user | format('%10s') -%]</td>
-<td>[%- file.group | format('%10s') %]</td><td>[% file.filename %]</td>
-<td>[% file.has_content %]</tr>
+<td>[%- file.group | format('%10s') %]</td>
+<td>
+    [% IF file.has_content %]
+    <a href="[% c.uri_for('/', rpmurl, 'files', file.count) %]">
+    [% file.filename | html  %]
+    </a>
+    [% ELSE %]
+    [% file.filename | html  %]
+    [% END %]
+</td></tr>
 [%- IF loop.last -%]
 </table>
 [%- END -%]
