- add rpm search by dated

--- a/server/trunk/web/root/templates/html/explorer/index.html
+++ b/server/trunk/web/root/templates/html/explorer/index.html
@@ -1,5 +1,5 @@
 
-<form action="[% c.uri_for('/', c.req.path) %]" id="explorer_d">
+<form action="[% c.uri_for('/', c.req.path) %]" id="explorer_d" method="POST">
     <span id="distribselect">
     [% INCLUDE 'ajax/forms/distribselect.tt' %]
     </span>
