--- a/server/trunk/web/root/templates/html/index.tt
+++ b/server/trunk/web/root/templates/html/index.tt
@@ -1,1 +1,21 @@
 <!-- $Id -->
+
+[% FOREACH package = c.forward('/search/bydate', [
+    {
+    src => 1,
+    rows => 10,
+    },
+    1 ]) %]
+
+<div class="sophie_package_list">
+<h2><a href="[% c.uri_for('/distrib', package.distribution, package.release,
+    package.arch, 'by-pkgid',  package.pkgid) %]">
+    [% package.filename %]</a></h2>
+<p>
+[% c.forward('/rpms/queryformat', [ package.pkgid, '%{summary}' ]) | html %]
+</p>
+<p>[% package.distribution | html %] - [% package.release | html %] -
+    [% package.arch | html %] / [% package.media | html %]
+</p>
+</div>
+[% END %]
