--- a/server/trunk/web/root/templates/includes/header.tt
+++ b/server/trunk/web/root/templates/includes/header.tt
@@ -18,7 +18,9 @@
 <body>
 
     <div id="sophie_header">
+    <a href="[% c.uri_for('/') %]">
     <img src="[% c.uri_for('/static', 'sophie.png') -%]" style="float:left">
+    </a>
     <div style="float:left">
         <p id="sitename">Sophie</p>
         <p id="sophie_menu">
