--- a/server/trunk/web/root/templates/html/index.tt
+++ b/server/trunk/web/root/templates/html/index.tt
@@ -1,4 +1,6 @@
 <!-- $Id -->
+[% USE 'GuessEncode' %]
+[% USE 'ObfuscateMail' %]
 
 [% FOREACH package = c.forward('/search/bydate', [
     {
@@ -12,7 +14,7 @@
     package.arch, 'by-pkgid',  package.pkgid) %]">
     [% package.filename %]</a></h2>
 <p>
-[% c.forward('/rpms/queryformat', [ package.pkgid, '%{summary}' ]) | html %]
+[% c.forward('/rpms/info', [ package.pkgid ]).summary | guessencode | html %]
 </p>
 <p>[% package.distribution | html %] - [% package.release | html %] -
     [% package.arch | html %] / [% package.media | html %]
