- add rpm/location subpage

--- a/server/trunk/web/root/templates/html/rpms/menu.tt
+++ b/server/trunk/web/root/templates/html/rpms/menu.tt
@@ -2,3 +2,4 @@
 <a href="[% c.uri_for('/', rpmurl, 'deps') %]">Deps</a>
 <a href="[% c.uri_for('/', rpmurl, 'files') %]">Files</a>
 <a href="[% c.uri_for('/', rpmurl, 'changelog') %]">ChangeLog</a>
+<a href="[% c.uri_for('/', rpmurl, 'location') %]">Location</a>
