--- a/server/trunk/web/root/templates/html/rpms/rpms.html
+++ b/server/trunk/web/root/templates/html/rpms/rpms.html
@@ -2,4 +2,11 @@
 
 [% INCLUDE 'rpms/menu.tt' %]
 
-[% INCLUDE 'rpms/rpms.tt' %]
+<div id="body_main">
+
+    [% INCLUDE 'rpms/rpms.tt' %]
+</div>
+
+<div id="body_additional">
+    [% INCLUDE 'rpms/related.tt' %]
+</div>
