--- a/server/trunk/web/root/static/sophie.css
+++ b/server/trunk/web/root/static/sophie.css
@@ -1,8 +1,42 @@
 /* $Id$ */
 
+a:link {
+  color: #573B1D;/*#FAD170;  */
+}
+
+a:visited {
+  color: #F7B62D;/*#43A321;  */
+}
+
+div#mainpage {
+    /*
+    margin-left: 1em;
+    margin-right: 1em;
+    margin-top: 1em;
+    margin-bottom: 1em;*/
+    padding: 1em;
+/*    float: left; */
+}
+
+div#body_main {
+    float:left;
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
+div#body_additional {
+    float:left;
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
 div#sophie_header {
     border: outset;
     background-color: #43A321;/*#4E8E21;/*#4EB560;/*#3F98FC;*/
+}
+
+div#sophie_rpms_menu {
+    margin-left: 1em;
 }
 
 #sophie_header p {
@@ -53,9 +87,3 @@ pre.filedata {
     border: outset;
 }
 
-a:link {
-  color: #573B1D;/*#FAD170;  */
-}
-a:visited {
-  color: #F7B62D;/*#43A321;  */
-}
