- use a lighter green for header

--- a/server/trunk/web/root/static/sophie.css
+++ b/server/trunk/web/root/static/sophie.css
@@ -44,7 +44,7 @@ div#body_additional {
 
 div#sophie_header {
     border: outset;
-    background-color: #43A321;/*#4E8E21;/*#4EB560;/*#3F98FC;*/
+    background-color: #0DBE0D;/*#4E8E21;/*#4EB560;/*#3F98FC;*/
 }
 
 #sophie_rpms_menu {
