--- a/server/trunk/web/root/templates/html/search/results.tt
+++ b/server/trunk/web/root/templates/html/search/results.tt
@@ -29,5 +29,26 @@ pager.next_page %]</a>
 <p>
 [% info.summary | guessencode | html %]
 </p>
+
+[%# Depending the search, we have to perform a quick search per package to show
+result detail %]
+[% IF c.req.param('type') == 'bydep' %]
+[% sargs.0.pkgid = pkgid %]
+<ul>
+[% FOREACH dep = c.forward('/search/dep_search', sargs).results %]
+<li>[% dep.name | html %] [% dep.sense | html %] [% dep.evr | html %]</li>
+[% END %]
+</ul>
+[% END %]
+
+[% IF c.req.param('type') == 'byfile' %]
+[% sargs.0.pkgid = pkgid %]
+<ul class="filename">
+[% FOREACH file = c.forward('/search/file_search', sargs).results %]
+<li>[% file.dirname | html -%][%- file.basename | html %]</li>
+[% END %]
+</ul>
+[% END %]
+
 </div>
 [% END %]
